temp var will be change between the range of 0.01 and previous temp. This means that next temp is always less than or equal to previous temp

--- a/Simulated Annealing.ipynb
+++ b/Simulated Annealing.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "682b001f-ccee-4d4e-bd4d-89e616f6fd32",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter probability of occurence of head :  0.9999\n"
@@ -36,6 +36,7 @@
     "    while diff > temp:\n",
     "        p1 = p1 - temp\n",
     "        p2 = p2 + temp\n",
+    "        temp = uniform(0.001,temp)\n",
     "        diff = abs(p1 - p2)\n",
     "    return p1,p2\n",
     "    \n",
