--- a/Simulated Annealing.ipynb
+++ b/Simulated Annealing.ipynb
@@ -2,28 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "682b001f-ccee-4d4e-bd4d-89e616f6fd32",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter probability of occurence of head :  0.9999\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial probability of heads : 0.9999\n",
-      "Initial probability of tails : 0.0001\n",
-      "Final probability of heads : 0.51\n",
-      "Final probability of tails : 0.49\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Simulated Annealing\n",
     "#demonstrate simulated annealing using coin toss\n",
@@ -44,28 +26,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cb50f74b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial probability of heads : 0.9\n",
+      "Initial probability of tails : 0.1\n",
+      "Final probability of heads : 0.5\n",
+      "Final probability of tails : 0.5\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    p1 = float(input('Enter probability of occurence of head : '))\n",
-    "    p2 = 1 - p1 #probability of tails\n",
-    "    flag = 1\n",
+    "    while True:\n",
+    "        p1 = float(input('Enter probability of occurence of head : '))\n",
+    "        p2 = 1 - p1 #probability of tails\n",
+    "        if p1 > 0.5 and p1 <= 1:\n",
+    "            break\n",
+    "        print('Enter probability between (0.5,1]')\n",
     "    print(f'Initial probability of heads : {round(p1,4)}')\n",
     "    print(f'Initial probability of tails : {round(p2,4)}')\n",
-    "    if p1 < p2:\n",
-    "        flag = 0\n",
-    "        temp = p1\n",
-    "        p1 = p2\n",
-    "        p2 = temp\n",
     "    new_p1, new_p2 = simulated_annealing(p1,p2)\n",
-    "    if flag == 0:\n",
-    "        temp = p1\n",
-    "        p1 = p2\n",
-    "        p2 = temp\n",
     "    print(f'Final probability of heads : {round(new_p1,2)}')\n",
     "    print(f'Final probability of tails : {round(new_p2,2)}')"
    ]
@@ -95,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
